...
}

object SignUpScreenTestTags {
  const val SCREEN = "SignUpScreen"
  const val BACK_BUTTON = "BackButton"
  const val TITLE = "SignUpTitle"
  const val FIRSTNAME_FIELD = "NameField"
  const val LASTNAME_FIELD = "SurnameField"
  const val EMAIL_FIELD = "EmailField"
  const val PASSWORD_FIELD = "PasswordField"
  const val CONFIRM_PASSWORD_FIELD = "ConfirmPasswordField"
  const val SAVE_BUTTON = "SaveButton"
  const val FARMER_PILL = "FarmerPill"
  const val VET_PILL = "VetPill"
  const val SNACKBAR = "Snackbar"
}

