...
          }
        }
  }
}

object CodeComposableComponentsTestTags {
  const val CODE_FIELD = "OfficeCodeField"
  const val ADD_CODE_BUTTON = "AddOfficeButton"
  const val GENERATE_BUTTON = "GenerateButton"
  const val GENERATE_FIELD = "GenerateField"
  const val SAVE_BUTTON = "SaveButton"
  const val COPY_CODE = "CopyCode"
}

