...
                  val notification =
                      Notification.ConnectOffice(destinationUid = uid, description = description)
                  val messagingService = NotificationHandlerFirebase()
                  messagingService.uploadNotification(notification)
                }

                _claimMessage.value = "Office successfully added!"
              }
              is Vet -> {
                try {
                  userViewModel.updateVetOfficeId(officeId).await()
                  val updatedOffice =
                      officeRepository.getOffice(officeId).fold({ office ->
...
                    val notification =
                        Notification.JoinOffice(destinationUid = uid, description = description)
                    val messagingService = NotificationHandlerFirebase()
                    messagingService.uploadNotification(notification)
                  }

                  _claimMessage.value = "You successfully joined an office"
                } catch (_: Exception) {
                  if (_claimMessage.value == null)
                      _claimMessage.value = "Something went wrong somehow :("
                }
              }
            }
...
